--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="Snake.MainWindow"
+<Window x:Class="Snake.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Snake"
         mc:Ignorable="d"
-        Title="Snake  - Score: 0" SizeToContent="WidthAndHeight" ContentRendered="Window_ContentRendered">
+        Title="Snake  - Score: 0" SizeToContent="WidthAndHeight" ContentRendered="Window_ContentRendered" KeyDown="Window_KeyDown">
     <Grid>
         <Border BorderBrush="Black" BorderThickness="5">
-            <Canvas Name="GameArea" ClipToBounds="True" Width="700" Height="400"></Canvas>
+            <Canvas Name="GameArea" ClipToBounds="True" Width="700" Height="400" Focusable="False"></Canvas>
         </Border>
     </Grid>
 </Window>
