--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="Snake.App"
+<Application x:Class="Snake.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Snake"
-             StartupUri="MainWindow.xaml">
+             StartupUri="WelcomeWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
