--- a/WelcomeWindow.xaml
+++ b/WelcomeWindow.xaml
@@ -12,7 +12,7 @@
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="40">
             <TextBlock Text="Snake" FontSize="48" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,40"/>
-            <Button x:Name="BtnDemarrer" Content="Démarrer" Click="BtnDemarrer_Click"
+            <Button Content="Démarrer" Command="{Binding DemarrerCommand}"
                     Width="160" Height="40" FontSize="16" Cursor="Hand"/>
         </StackPanel>
     </Grid>
