refactor: passage à MVVM, DI et GameEngine
- Core (IGameEngine, GameEngine, GameConfig), Services (ITimerService), ViewModels
- DI dans App.xaml.cs ; overlay Game Over + Rejouer ; désabonnements ; README

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Snake"
         mc:Ignorable="d"
-        Title="{Binding Title}" SizeToContent="WidthAndHeight" ContentRendered="Window_ContentRendered" KeyDown="Window_KeyDown" Focusable="True">
+        Title="{Binding Title}" SizeToContent="WidthAndHeight" ContentRendered="Window_ContentRendered" Closed="Window_Closed" KeyDown="Window_KeyDown" Focusable="True">
     <Grid>
         <Border BorderBrush="Black" BorderThickness="5">
             <Grid Width="700" Height="400">
