--- a/WelcomeWindow.xaml
+++ b/WelcomeWindow.xaml
@@ -8,7 +8,8 @@
         Title="Snake" Width="400" Height="280"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
-        Background="#F5F2EB">
+        Background="#F5F2EB"
+        Closed="Window_Closed">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="40">
             <TextBlock Text="Snake" FontSize="48" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,40"/>
