--- a/WelcomeWindow.xaml
+++ b/WelcomeWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Snake"
         mc:Ignorable="d"
-        Title="Snake"
+        Title="Serpentium"
         Width="700"
         Height="600"
         WindowStartupLocation="CenterScreen"
@@ -40,17 +40,22 @@
                             BlurRadius="10"
                             Opacity="0.2"/>
                 </Border.Effect>
-                <TextBlock Text="🐍 SNAKE"
+                <TextBlock Text="Serpentium"
                            FontSize="56"
                            FontWeight="Bold"
-                           HorizontalAlignment="Center"
-                           Style="{StaticResource TitleStyle}">
+                           HorizontalAlignment="Center">
+                    <TextBlock.Foreground>
+                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                            <GradientStop Color="#4CAF50" Offset="0"/>
+                            <GradientStop Color="#2E7D32" Offset="1"/>
+                        </LinearGradientBrush>
+                    </TextBlock.Foreground>
                     <TextBlock.Effect>
-                        <DropShadowEffect Color="#6BA644"
+                        <DropShadowEffect Color="#40000000"
                                 Direction="270"
-                                ShadowDepth="2"
-                                BlurRadius="4"
-                                Opacity="0.5"/>
+                                ShadowDepth="1"
+                                BlurRadius="2"
+                                Opacity="0.2"/>
                     </TextBlock.Effect>
                 </TextBlock>
             </Border>
