--- a/Views/HomeView.xaml
+++ b/Views/HomeView.xaml
@@ -1,17 +1,10 @@
-<Window x:Class="Snake.WelcomeWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Snake"
-        mc:Ignorable="d"
-        Title="Serpentium"
-        Width="700"
-        Height="600"
-        WindowStartupLocation="CenterScreen"
-        ResizeMode="NoResize"
-        Background="{StaticResource BackgroundColor}"
-        Closed="Window_Closed">
+<UserControl x:Class="Snake.Views.HomeView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             d:DesignHeight="600" d:DesignWidth="700">
     <Grid>
         <!-- Fond avec dégradé subtil -->
         <Grid.Background>
@@ -140,4 +133,4 @@
             </Button>
         </StackPanel>
     </Grid>
-</Window>
+</UserControl>
